# extended-einsum-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
extended-einsum/: Cargo.toml
extended-einsum-macros/: Cargo.toml
extended-einsum-macros-internal/: Cargo.toml
extended-einsum-macros-internal/src/: lib.rs
extended-einsum-macros/src/: lib.rs
extended-einsum/src/: lib.rs
