[package]
name = "extended-einsum-macros-internal"
version = "0.1.0"
authors = ["Michael Hoy <mch.hoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
ndarray = "0.15.3"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = "1.0.76"